--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,45 @@
-.h1{
-background-color: #0D0D0D;
-width: 100%;
+
+Homepage
+
+.logoheading{
+color: white;
+height: 70px;
+size: 300%;
+text-align: center;
+margin-top: -70px;
+font-family: teko;
 }
 
 .logo{
     float:left;
-    width: 10%;
-
+    width: 40%;
+    margin-top: -90px;
+    margin-left: 380px;
 }
 
-body{
-    width: 100%;
-    
+.vrpic{
+    margin-top: 0px;
 }
 
 .saying{
-    float: right;
+    text-align: center;
+    size: 100px;
+    font-family: teko; 
 
 }
+
+.menu{
+    background-color: #0D0D0D;
+    width: 100%;
+    height: 70px;
+    margin-top: -10px;
+}
+
+about page 
+
+exhibition page 
+
+explore page 
+
+visit page 
 
