--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@ font-family: teko;
 .vrpic{
     margin-top: 0px;
     float: right;
+    max-width: 200%;
+    max-height: 100%;
     margin-right: 250px;
 }
 
