--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,26 @@
 .logoheading{
 color: white;
 height: 70px;
-size: 300%;
+font-size: 30px;
 text-align: center;
-margin-top: -70px;
+margin-top: -130px;
+margin-left: 150px;
 font-family: teko;
+z-index: -1;
 }
 
 .logo{
     float:left;
     width: 40%;
-    margin-top: -90px;
-    margin-left: 380px;
+    margin-top: -60px;
+    margin-left: 350px;
+    z-index: 1;
 }
 
 .vrpic{
-    margin-top: 0px;
-    float: right;
-    max-width: 200%;
-    max-height: 100%;
-    margin-right: 250px;
-}
-
-.saying{
-    text-align: center;
-    size: 100px;
-    font-family: teko; 
-
+    margin-top: -30px;
+    
+    
 }
 
 .menu{
@@ -36,4 +30,24 @@ font-family: teko;
     margin-top: -10px;
 }
 
+.material-icons{
+    font-size: 48px;
+   
+    z-index: 1;
+    margin-top: -500px;
+    color: white;
 
+}
+
+.icons{
+    float: right;
+    margin-top: -58px;
+    margin-right: -20px;
+    
+}
+
+.menubutton{
+    float: left;
+    margin-top: -38px;
+    margin-left: 10px;
+}
