--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ color: white;
 height: 70px;
 font-size: 30px;
 text-align: center;
-margin-top: -130px;
+margin-top: -110px;
 margin-left: 150px;
 font-family: teko;
 z-index: -1;
@@ -18,8 +18,10 @@ z-index: -1;
 }
 
 .vrpic{
-    margin-top: -30px;
-    
+    float: center;
+    margin-top: 0px;
+    z-index: 1000px;
+    position: relative;
     
 }
 
@@ -28,6 +30,7 @@ z-index: -1;
     width: 100%;
     height: 70px;
     margin-top: -10px;
+
 }
 
 .material-icons{
@@ -44,10 +47,26 @@ z-index: -1;
     margin-top: -58px;
     margin-right: -20px;
     
+    
 }
 
-.menubutton{
+.menubutton{ 
+    background-color: black;
+    display: table-row;
     float: left;
-    margin-top: -38px;
-    margin-left: 10px;
+    margin-top: 0px;
+    margin-left: 30px;
+    
 }
+
+.menubutton:hover .Mbutt:hover {
+background-color: black;
+
+}
+
+.Mbutt{
+display: block;
+list-style: none;
+;
+}
+
