--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,14 @@
-body{
-    background-image:image(index3.jpg);
-}
 
 .logoheading{
+position: relative;
 color: white;
 height: 70px;
 font-size: 30px;
 text-align: center;
-margin-top: -410px;
+margin-top: -330px;
 margin-left: 150px;
 font-family: teko;
-z-index: -1;
+z-index: 5000;
 }
 
 .logo{
@@ -22,21 +20,17 @@ z-index: -1;
 }
 
 .vrpic{
-    position: fixed;
     float: center;
-    margin-top: 0px;
     position: relative;
     
 }
 
 .menu{
+    margin-top: 0px;
     background-color: #0D0D0D;
     width: 100%;
     height: 70px;
-    margin-top: -10px;
-   
 }
-
 
 
 .icons{
@@ -45,30 +39,23 @@ z-index: -1;
     margin-right: -20px;
     cursor: pointer;
     z-index: 1000;
-    
-    
 }
 
 .menubutton{ 
-    width: 60px;
-    height: 60px;
-    background-color: black;
+    width: 100px;
+    height: 100px;
+    margin-top: -50px;
+    margin-left: 30px;
     color: white;
-    background-image:url("Icon .material-icons.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center;
     cursor: pointer;
-    
-    
 }
 
 .nav-sidebar{
     font-size: 25px;
     width: 150px;
+    margin-top: -75px;
     background-color: black;
     opacity: 80%;
-    z-index: 1000px;
 }
 
 ul, li{
