--- a/css/styles.css
+++ b/css/styles.css
@@ -43,14 +43,16 @@ z-index: 5000;
 
 .menubtn{ 
     position: relative;
-    margin-top: -480px;
+    margin-top: -15x;
     margin-left: 30px;
     color: white;
     background-color: #0D0D0D;
     cursor: pointer;
     z-index: 9000;
+    size: 50px; 
 }
 
 .dropdown-content{
     display: hidden;
+    
 }
