--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ color: white;
 height: 70px;
 font-size: 30px;
 text-align: center;
-margin-top: -330px;
+margin-top: -150px;
 margin-left: 150px;
 font-family: teko;
 z-index: 5000;
@@ -47,18 +47,55 @@ z-index: 5000;
     z-index: 1000;
 }
 
-.menubtn{ 
-    position: relative;
-    margin-top: -25x;
-    margin-left: 30px;
-    color: white;
-    background-color: #0D0D0D;
-    cursor: pointer;
-    z-index: 9000;
-    size: 50px; 
-}
 
-.dropdown-content{
-    display: hidden;
+.menubtn {
+    background-color:black;
+    color: white;
+    margin-top: -280px;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    z-index: 1000;
+  }
+  
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    opacity: 80%;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px; 
     
+    z-index: 1;
+  }
+  
+.dropdown-content a {
+    font-family: teko;
+    font-size: 30px;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+  }
+  
+.dropdown-content a:hover {
+      background-color:black;
+      opacity: 80%;
+    }
+  
+.dropdown:hover .dropdown-content {
+      display: block;
+    }
+  
+
+
+.vrglasses{
+    width: auto;
+    height: 100%;
 }
