--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body{
-    display: block;
-    margin: 0;
+margin: 0;
 
 }
 
@@ -18,84 +17,79 @@ z-index: 5000;
 }
 
 .logo{
-    float:left;
-    width: 40%;
-    margin-top: -63px;
-    margin-left: 346px;
-    z-index: 1;
+float:left;
+width: 40%;
+margin-top: -63px;
+margin-left: 346px;
+z-index: 1;
 }
 
-.vrpic{
-    float: center;
-    position: relative;
-    
-}
 
 .menu{
-    margin-top: 0px;
-    background-color: #0D0D0D;
-    width: 100%;
-    height: 70px;
+margin-top: 0px;
+background-color: #0D0D0D;
+width: 100%;
+height: 70px;
 }
 
 
 .icons{
-    float: right;
-    margin-top: -58px;
-    margin-right: -20px;
-    cursor: pointer;
-    z-index: 1000;
+float: right;
+margin-top: -58px;
+margin-right: -20px;
+cursor: pointer;
+z-index: 4000;
 }
 
 
 .menubtn {
-    background-color:black;
-    color: white;
-    margin-top: -280px;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    z-index: 1000;
-  }
-  
-.dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    opacity: 80%;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px; 
-    
-    z-index: 1;
-  }
-  
-.dropdown-content a {
-    font-family: teko;
-    font-size: 30px;
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    text-align: center;
-    display: block;
-  }
-  
-.dropdown-content a:hover {
-      background-color:black;
-      opacity: 80%;
-    }
-  
-.dropdown:hover .dropdown-content {
-      display: block;
-    }
-  
-
-
-.vrglasses{
-    width: auto;
-    height: 100%;
+background-color:black;
+color: white;
+margin-top: -280px;
+padding: 16px;
+font-size: 16px;
+border: none;
+z-index: 1000;
+cursor: pointer;
 }
+  
+.falld {
+position: relative;
+display: inline-block;
+}
+  
+.falld-content {
+display: none;
+position: absolute;
+background-color: black;
+opacity: 80%;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px; 
+z-index: 1;
+}
+  
+.falld-content a {
+font-family: teko;
+font-size: 30px;
+color: white;
+padding: 12px 16px;
+text-decoration: none;
+text-align: center;
+display: block;
+}
+  
+.falld-content a:hover {
+background-color:black;
+opacity: 80%;
+}
+  
+.falld:hover .falld-content {
+display: block;
+}
+
+
+.vrpic{
+float: center;
+z-index: -2000px;
+        
+    }
