--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,9 @@ header{
 .logoheading{
 color: white;
 height: 70px;
-font-size: 30px;
+font-size: 25px;
 text-align: center;
-margin-top: -110px;
+margin-top: -100px;
 margin-left: 160px;
 font-family: teko;
 z-index: 5000;
@@ -21,7 +21,7 @@ z-index: 5000;
 float:left;
 width: 40%;
 margin-top: -65px;
-margin-left: 346px;
+margin-left: 380px;
 z-index: 1;
 }
 
@@ -82,5 +82,37 @@ display: block;
 .vrpic{
 float: center;
 z-index: -2000px;
-        
-    }
+}
+
+
+
+ABOUT
+.p{
+    font-family: teko;
+}
+
+.abouttext{
+    font-family: teko;
+    font-size: 20px;
+    width: 700px;
+    text-align: center;
+    padding: 100px 100px 50px 100px;
+    color: #0d0d0d;
+    background-color: green;
+    opacity: 80%;
+    margin-top: 50px;
+    margin-left: 220px;
+    z-index: -1000;
+}
+
+.book{
+    border-radius: 20px 20px 20px 20px;
+    border-color: #0d0d0d;
+    font-size: 20px;
+    background-color: white;
+    color: #0d0d0d;
+    font-family: teko;
+    cursor: pointer;
+    padding: 5px 10px 5px 10px;
+    z-index: 100;
+}
