--- a/css/styles.css
+++ b/css/styles.css
@@ -149,3 +149,35 @@ position: relative;
 z-index: -6000;
 margin-top: -800px;
 }
+
+
+EXHIBITION
+
+.p{
+font-family: teko;
+}
+
+.exitext{
+    width: 700px;
+    text-align: center;
+    font-size: 20px;
+    font-family: teko;
+    margin-left: 120px;
+    margin-top: 40px;
+    padding: 70px 200px 200px 200px;
+    background-color: white;
+    color: #0d0d0d;
+    opacity: 80%;
+
+}
+
+.exhibitionimg{
+    position: relative;
+    z-index: -6000;
+    margin-top: -1500px;
+}
+
+
+VISIT 
+
+
