--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ ABOUT
 
 .book{
     border-radius: 20px 20px 20px 20px;
-    border-color: #0d0d0d;
+    border-color: #FC5D35;
     font-size: 20px;
     background-color: white;
     color: #0d0d0d;
@@ -177,6 +177,10 @@ font-family: teko;
     margin-top: -1500px;
 }
 
+
+.falld-content .current{
+background-color:#FC5D35;
+}
 
 VISIT 
 
