--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+
+
 body{
 margin: 0;
 }
@@ -158,23 +160,23 @@ font-family: teko;
 }
 
 .exitext{
-    width: 700px;
-    text-align: center;
-    font-size: 20px;
-    font-family: teko;
-    margin-left: 120px;
-    margin-top: 40px;
-    padding: 70px 200px 200px 200px;
-    background-color: white;
-    color: #0d0d0d;
-    opacity: 80%;
+width: 700px;
+text-align: center;
+font-size: 20px;
+font-family: teko;
+margin-left: 120px;
+margin-top: 40px;
+padding: 70px 200px 200px 200px;
+background-color: white;
+color: #0d0d0d;
+opacity: 80%;
 
 }
 
 .exhibitionimg{
-    position: relative;
-    z-index: -6000;
-    margin-top: -1500px;
+position: relative;
+z-index: -6000;
+margin-top: -1500px;
 }
 
 
@@ -184,4 +186,29 @@ background-color:#FC5D35;
 
 VISIT 
 
+SPECIAL EVENTS
 
+.p, h1{
+font-family: teko;
+}
+
+.newstext{
+font-family: teko;
+width: 600px;
+margin-left: 300px;
+margin-top: 60px;
+padding: 10px 50px 50px 50px;
+text-align: center;
+font-size: 20px;
+background-color: white;
+opacity: 80%;
+color: #0d0d0d;
+z-index: 10000;
+
+}
+
+.imghuman{
+position: relative;
+margin-top: -750px;
+z-index: -9000;
+}
