--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,10 @@ header{
 .logoheading{
 color: white;
 height: 70px;
-font-size: 25px;
+font-size: 2vw;
 text-align: center;
 margin-top: -100px;
-margin-left: 160px;
+margin-left: 210px;
 font-family: teko;
 z-index: 5000;
 }
@@ -99,11 +99,11 @@ ABOUT
     font-size: 20px;
     width: 700px;
     text-align: center;
-    padding: 100px 100px 50px 100px;
+    padding: 40px 100px 50px 100px;
     color: #0d0d0d;
     background-color: white;
     opacity: 80%;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: 220px;
     z-index: -1000;
 }
@@ -138,7 +138,7 @@ text-align: center;
 font-size: 20px;
 font-family: teko;
 margin-left: 230px;
-margin-top: 40px;
+margin-top: 30px;
 padding: 40px 100px 100px 100px;
 background-color: white;
 color: #0d0d0d;
@@ -149,7 +149,7 @@ cursor: pointer;
 .expimg{
 position: relative;
 z-index: -6000;
-margin-top: -800px;
+margin-top: -900px;
 }
 
 
@@ -185,6 +185,39 @@ background-color:#FC5D35;
 }
 
 VISIT 
+.p{
+font-family: teko;
+}
+
+.hourtext{
+font-family: teko;
+padding: 20px 50px 20px 50px;
+text-align: center;
+color: #0d0d0d;
+width: 136px;
+background-color:white;
+opacity: 70%;
+margin-left: 1000px;
+margin-top: -800px;
+z-index: 6000;
+}
+
+.visittext{
+font-family: teko;
+padding: 20px 50px 20px 50px;
+text-align: center;
+color: #0d0d0d;
+width: 150px;
+background-color:white;
+opacity: 80%;
+margin-top: -260px;
+margin-left: 530px;
+}
+
+.visitimg{
+position: relative;
+z-index: -8000;
+}
 
 SPECIAL EVENTS
 
@@ -201,7 +234,7 @@ padding: 10px 50px 50px 50px;
 text-align: center;
 font-size: 20px;
 background-color: white;
-opacity: 80%;
+opacity: 70%;
 color: #0d0d0d;
 z-index: 10000;
 
