--- a/css/styles.css
+++ b/css/styles.css
@@ -185,66 +185,54 @@ background-color:#FC5D35;
 }
 
 VISIT 
+
 .p{
 font-family: teko;
 }
 
-.hourtext{
+.locationtext,.hourtext, .visittext, .acctext, .foodtext, .shoptext{
 font-family: teko;
-padding: 20px 50px 20px 50px;
 text-align: center;
-color: #0d0d0d;
-width: 200px;
-background-color:white;
-opacity: 70%;
-margin-left: 900px;
-margin-top: -800px;
-z-index: 6000;
-font-size: 20px;
-}
-
-.visittext{
-font-family: teko;
-padding: 20px 50px 20px 50px;
-text-align: center;
-color: #0d0d0d;
-width: 300px;
-background-color:white;
-opacity: 80%;
-margin-top: -300px;
-margin-left: 470px;
-font-size: 20px;
-}
-
-.locationtext{
-font-family: teko;
-padding: 20px 50px 20px 50px;
-text-align: center;
-color: #0d0d0d;
-width: 200px;
 background-color: white;
 opacity: 80%;
 font-size: 20px;
-margin-top: -270px;
+color: #0d0d0d;
+}
+
+.hourtext{
+padding: 20px 50px 20px 50px;
+width: 200px;
+margin-left: 840px;
+margin-top: -830px;
+z-index: 6000;
+}
+
+.visittext{
+padding: 2px 20px 5px 20px;
+width: 300px;
+margin-top: -330px;
+margin-left: 470px;
+}
+
+.locationtext{
+padding: 20px 50px 20px 50px;
+width: 200px;
+margin-top: -300px;
 margin-left: 140px;
 }
 
 .acctext{
-font-family: teko;
 padding: 20px 100px 20px 100px;
-text-align: center;
 width: 600px;
-background-color: white;
-opacity: 80%;
-font-size: 20px;
 margin-top: 50px;
 margin-left: 250px;
 }
 
-.foodtext{
-font-family: teko;
-padding: 20px 100px 20px 100px;
-
+.foodtext, .shoptext{
+padding: 10px 100px 10px 100px;
+width: 600px;
+margin-left: 250px;
+margin-top: 10px;
 }
 
 .visitimg{
