--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,31 @@
 
 
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .icons {width: 8.66%;}
+    .menubtn {width: 8.66%;}
+    .logo {width: 10%;}
+    .logoheading {width: 50%;}
+    .falld-content {width: 20%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+  }
+
+  [class*="icons, falld, menubtn, logoheading, logo, visitimg, hourtext, visittext, locationtext, acctext, shoptext, foodtext"] {
+    float: left;
+    padding: 15px;
+  }
+
 body{
 margin: 0;
 }
@@ -22,7 +48,7 @@ z-index: 5000;
 .logo{
 float:left;
 width: 40%;
-margin-top: -65px;
+margin-top: 0px;
 margin-left: 380px;
 z-index: 1;
 }
