--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,4 @@
 
-
-/* For mobile phones: */
-  [class*="icons, falld, menubtn, logoheading, logo, visitimg, hourtext, visittext, locationtext, acctext, shoptext, foodtext"] {
-    [class*=""] {
-    width: 100%;
-  }
-
-  @media only screen and (min-width:200px){
-
-  }
-  }
-      
-  }
   
   @media only screen and (min-width: 200px) {
     /* For desktop: */
@@ -51,21 +38,17 @@ max-width: 3000px;
 
 .logoheading{
 color: white;
-height: 70px;
 font-size: 2vw;
 text-align: center;
-position:sticky;
-margin-top: -130px;
+margin-top: 0px;
 margin-left: 350px;
 font-family: teko;
 z-index: 5000;
 }
 
 .logo{
-position: fixed;
-width: 40%;
-margin-top: -70px;
-margin-left: 380px;
+margin-top: -140px;
+margin-left: 200px;
 z-index: 1;
 }
 
@@ -88,6 +71,7 @@ font-size: 16px;
 border: none;
 z-index: 1000;
 cursor: pointer;
+min-width: 150px;
 }
   
 .falld {
