--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
   @media only screen and (min-width: 400px) {
-    /* For desktop: */
+    /*For desktop:*/
     .icons {
         width: 15%;
     }
@@ -13,7 +13,7 @@
         
     }
     .logoheading {
-      float: left;
+      position: absolute;
       width: 100%;
     }
     .falld-content {width: 15%;}
@@ -42,17 +42,14 @@ background-color: #0d0d0d;
 background-position: center;
 min-height: 70px;
 z-index: -5000px;
-
-
 }
 
 .logoheading{
 position: absolute;
 color: white;
 font-size: 2vw;
-min-width: 15px;
 text-align: center;
-margin-top: -90px;
+margin-top: -100px;
 font-family: teko;
 z-index: 5000px;
 }
