--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,46 @@
-
-  @media only screen and (min-width: 400px) {
+ 
+ @media only screen and (min-width: 200px) {
     /*For desktop:*/
-    .icons {
-        width: 15%;
-    }
-    .menubtn {
-        width:15%;
-      
-    }
-    .logo {
-        width: 100%;
-        
-    }
-    .logoheading {
-      position: absolute;
-      width: 100%;
-    }
-    .falld-content {width: 15%;}
-    .visitimg {width: 15%;}
-    .hourtext {width: 15%;}
-    .visittext {width: 15%%;}
-    .locationtext {width: 15%;}
-    .acctext {width: 15%;}
-    .shoptext {width: 15%;}
-    .foodtext {width: 15%;}
-    .newstext { width: 30; }
+  .icons {
+  width: 15%;
+  }
+  
+  .menubtn {
+  width:15%;
+  }
     
-
-  [class*="icons, falld, menubtn, logoheading, logo"] {
-    float: left;
-    padding: 15px;
+  .logo {
+  width: 100%;
+  }
+    
+  .logoheading {
+  position: absolute;
+  width: 100%;
   }
 
+  .abouttext{
+  width: 50%;
+  }
+  
+  .exitext{
+  width: 50%;
+  }
 
+  .falld-content {
+  width: 25%;
+  }
+    
+  .locationtext, .hourtext,.acctext, .shoptext, .foodtext, .newstext, .visittext {
+  width: 50%;
+  
+  }
+  
+  .newstext { 
+  width: 50%; 
+  }
+  
 body{
-margin: 0;
+margin: 0px;
 }
 
 header{
@@ -49,22 +55,25 @@ position: absolute;
 color: white;
 font-size: 2vw;
 text-align: center;
-margin-top: -100px;
+margin-top: -110px;
 font-family: teko;
 z-index: 5000px;
+}
+
+.div.logo{
+  max-width: 10%;
 }
 
 .logo{
 position: absolute;
 margin-top: -60px;
-margin-left: 250px;
+margin-left: 270px;
 z-index: 5001px;
 }
 
 .icons{
 float: right;
 margin-top: 5px;
-padding: 0px 20px 0px 0px;
 margin-right: -30px;
 cursor: pointer;
 z-index: 4000px;
@@ -117,12 +126,10 @@ opacity: 80%;
 display: block;
 }
 
-
 .vrpic{
 float: center;
 z-index: -2000px;
 }
-
 
 
 ABOUT
@@ -133,13 +140,16 @@ font-family: teko;
 .abouttext{
 font-family: teko;
 font-size: 1.5vw;
-max-width: 900px;
+max-width: 700px;
+margin-left: 270px;
+margin-top: 15px;
 text-align: center;
 padding: 40px 100px 50px 100px;
 color: #0d0d0d;
 background-color: white;
 opacity: 80%;
 z-index: -1000;
+
 }
 
 .book{
@@ -165,6 +175,11 @@ z-index: 100;
     size: 50px; 
 }
 
+.aboutimg{
+  margin-top: -765px;
+  z-index: -10000px;
+}
+
 EXPLORE
 
 .p{
@@ -172,41 +187,41 @@ font-family: teko;
 }
 
 .exptext{
-width: 700px;
+max-width: 700px;
 text-align: center;
 font-size: 1.5vw;
 font-family: teko;
-margin-left: 230px;
+margin-left: 240px;
 margin-top: 30px;
-padding: 40px 100px 50px 100px;
-background-color: white;
 color: #0d0d0d;
+background-color: white;
 opacity: 80%;
+padding: 50px 50px 50px 50px;
 cursor: pointer;
+z-index: 10000px;
 }
 
 .expimg{
 position: relative;
+width: auto;
 z-index: -6000;
 margin-top: -1400px;
 }
 
-
 EXHIBITION
-
 .p{
 font-family: teko;
 
 }
 
 .exitext{
-width: 700px;
+max-width: 600px;
 text-align: center;
 font-family: teko;
 font-size: 1.5vw;
-margin-left: 120px;
+margin-left: 350px;
 margin-top: 40px;
-padding: 70px 200px 200px 200px;
+padding: 50px 100px 50px 100px;
 background-color: white;
 color: #0d0d0d;
 opacity: 80%;
@@ -216,7 +231,7 @@ opacity: 80%;
 .exhibitionimg{
 position: relative;
 z-index: -6000;
-margin-top: -1500px;
+margin-top: -1650px;
 }
 
 
@@ -229,6 +244,7 @@ VISIT
 .p{
 font-family: teko;
 }
+
 
 .locationtext,.hourtext, .visittext, .acctext, .foodtext, .shoptext{
 font-family: teko;
