--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,18 @@ z-index: 100;
   z-index: -10000px;
 }
 
+footer{
+  position: relative;
+  background-color: #0d0d0d;
+  text-align: center;
+  font-size: 1vw;
+  color: white;
+  font-family: teko;
+  padding: 10px;
+  margin-bottom: 0px;
+  z-index: 100000px; 
+}
+
 EXPLORE
 
 .p{
@@ -192,7 +204,6 @@ color: #0d0d0d;
 background-color: white;
 opacity: 80%;
 padding: 50px 50px 50px 50px;
-cursor: pointer;
 z-index: 10000px;
 }
 
@@ -235,6 +246,8 @@ background-color:#FC5D35;
 }
 
 VISIT 
+
+
 p{
   font-family: teko;
 }
@@ -249,12 +262,11 @@ p{
   opacity: 80%;
   padding: 30px 70px 30px 70px;
   margin-left: 300px;
-  margin-top: -550px;
+  margin-top: -950px;
   z-index: 3px;
 }
 
 .visitimg{
-height: 600px;
 position: relative;
 z-index: -8000;
 }
