--- a/css/styles.css
+++ b/css/styles.css
@@ -1,301 +1,8 @@
- 
- @media (min-width: 200px) {
-    /*For desktop:*/
-  .icons {
-  width: 15%;
-  }
-  
-  .menubtn {
-  width:15%;
-  }
-    
-  .logo {
-  width: 100%;
-  }
-    
-  .logoheading {
-  position: absolute;
-  width: 100%;
-  }
-
-  .abouttext{
-  width: 50%;
-  }
-  
-  .exitext{
-  width: 50%;
-  }
-
-  .falld-content {
-  width: 25%;
-  }
-    
-  .locationtext, .hourtext,.acctext, .shoptext, .foodtext, .newstext, .visittext {
-  width: 50%;
-  
-  }
-  
-  .newstext { 
-  width: 50%; 
-  }
-  
-body{
-margin: 0px;
-}
-
-header{
-background-color: #0d0d0d;
-background-position: center;
-min-height: 70px;
-z-index: -5000px;
-}
-
-.logoheading{
-position: absolute;
-color: white;
-font-size: 2vw;
-text-align: center;
-margin-top: -110px;
-font-family: teko;
-z-index: 5000px;
-}
-
-.logo{
-margin-top: -60px;
-margin-left: 270px;
-z-index: 5001px;
-}
-
-.icons{
-float: right;
-margin-top: 5px;
-margin-right: -30px;
-cursor: pointer;
-z-index: 4000px;
-}
-
-
-.menubtn {
-position: relative;
-background-color:#0d0d0d;
-color: white;
-padding: 16px;
-font-size: 16px;
-border: none;
-z-index: -9000px;
-cursor: pointer;
-min-width: 150px;
-
-}
-  
-.falld {
-display: block;
-}
-  
-.falld-content {
-display: none;
-position: absolute;
-background-color: black;
-opacity: 80%;
-min-width: 160px;
-box-shadow: 0px 8px 16px 0px; 
-z-index: 1;
-}
-  
-.falld-content a {
-font-family: teko;
-font-size: 30px;
-color: white;
-padding: 12px 16px;
-text-decoration: none;
-text-align: center;
-display: block;
-}
-  
-.falld-content a:hover {
-background-color:black;
-opacity: 80%;
-}
-  
-.falld:hover .falld-content {
-display: block;
-}
-
-.vrpic{
-float: center;
-z-index: -2000px;
-}
-
-
-ABOUT
-.p{
-font-family: teko;
-}
-
-.abouttext{
-font-family: teko;
-font-size: 1.5vw;
-max-width: 700px;
-margin-left: 270px;
-margin-top: 15px;
-text-align: center;
-padding: 40px 100px 50px 100px;
-color: #0d0d0d;
-background-color: white;
-opacity: 80%;
-z-index: -1000;
-
-}
-
-.book{
-border-radius: 20px 20px 20px 20px;
-border-color: #FC5D35;
-font-size: 2vw;
-background-color: white;
-color: #0d0d0d;
-font-family: teko;
-cursor: pointer;
-padding: 5px 10px 5px 10px;
-z-index: 100;
-}
-
-.menubtn{ 
-    position: relative;
-    margin-top: -35x;
-    margin-left: 30px;
-    color: white;
-    background-color: #0D0D0D;
-    cursor: pointer;
-    z-index: 9000;
-    size: 50px; 
-}
-
-.aboutimg{
-  margin-top: -725px;
-  z-index: -10000px;
-}
-
-footer{
-  position: relative;
-  background-color: #0d0d0d;
-  text-align: center;
-  font-size: 1vw;
-  color: white;
-  font-family: teko;
-  padding: 10px;
-  margin-bottom: 0px;
-  z-index: 100000px; 
-}
-
-EXPLORE
-
-.p{
-font-family: teko;
-}
-
-.exptext{
-max-width: 700px;
-text-align: center;
-font-size: 1.5vw;
-font-family: teko;
-margin-left: 350px;
-margin-top: 30px;
-color: #0d0d0d;
-background-color: white;
-opacity: 80%;
-padding: 50px 50px 50px 50px;
-z-index: 10000px;
-}
-
-.expimg{
-position: relative;
-width: auto;
-z-index: -6000;
-margin-top: -1400px;
-}
-
-EXHIBITION
-.p{
-font-family: teko;
-
-}
-
-.exitext{
-max-width: 600px;
-text-align: center;
-font-family: teko;
-font-size: 1.5vw;
-margin-left: 350px;
-margin-top: 40px;
-padding: 50px 100px 50px 100px;
-background-color: white;
-color: #0d0d0d;
-opacity: 80%;
-
-}
-
-.exhibitionimg{
-position: relative;
-z-index: -6000;
-margin-top: -1650px;
-}
-
-
-.falld-content .current{
-background-color:#FC5D35;
-}
-
-VISIT 
-
-
-p{
-  font-family: teko;
-}
-
-.visittext{
-  font-family: teko;
-  text-align: center;
-  max-width: 900px;
-  font-size: 1vw;
-  color: #0d0d0d;
-  background-color: white;
-  opacity: 80%;
-  padding: 30px 70px 30px 70px;
-  margin-left: 300px;
-  margin-top: -950px;
-  z-index: 3px;
-}
-
-.visitimg{
-position: relative;
-z-index: -8000;
-}
-
-
-
-SPECIAL EVENTS
-
-.p, h1{
-font-family: teko;
-}
-
-.newstext{
-font-family: teko;
-max-width: 700px;
-margin-left: 350px;
-margin-top: 60px;
-padding: 10px 50px 50px 50px;
-text-align: center;
-font-size: 1.8vw;
-background-color: white;
-opacity: 70%;
-color: #0d0d0d;
-z-index: 10000;
-
-}
-
-.imghuman{
-position: relative;
-margin-top: -980px;
-z-index: -9000;
-}
+@import "designs/index.css";
+@import "designs/about.css";
+@import "designs/visit.css";
+@import "designs/exhibition.css";
+@import "designs/explore.css";
+@import "designs/speciale.css";
+@import "designs/mediaq.css";
+@import "designs/footer.css";
