--- a/css/designs/index.css
+++ b/css/designs/index.css
@@ -27,6 +27,9 @@ header {
   margin-top: -100px;
 }
 
+h1{
+    text-align: center;
+}
 
 /*----------------------------------------------------------------*/
 
