--- a/css/designs/index.css
+++ b/css/designs/index.css
@@ -8,7 +8,7 @@ header {
   background-color: #0d0d0d;
 }
 
-.logoheading {
+.logoheading a {
   color: white;
   font-size: 26px;
   font-family: teko;
@@ -16,13 +16,13 @@ header {
   align-items: center;
   justify-content: center;
   padding-right: 30px;
+  text-decoration: none;
 }
 
-.logo {
-width: 20%;
-padding: 0;
+.logoheading img {
+width: 60px;
+padding:10px;
 }
-
 
 
 h1{
