--- a/css/designs/index.css
+++ b/css/designs/index.css
@@ -1,35 +1,50 @@
 body{
     margin: 0;
-    margin-top:-36px;
 }
 
+main{
+  margin-left: 100px;
+  margin-right: 100px;
+}
 
 header {
   background-color: #0d0d0d;
 }
 
+
+ h1{
+  font-family: teko;
+  text-align: center;
+  }
+
+  h2{
+    font-size: 30px;
+    font-family: teko;
+    text-align: center;
+  }
+  
+  p{
+  font-family: 'Open Sans' ;
+  font-size:2vh;
+  text-align: center;   
+  text-transform: uppercase;
+  color: #0d0d0d;
+  }
+
 .logoheading a {
   color: white;
-  font-size: 26px;
-  font-family: teko;
+  font-size: 2vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-right: 30px;
   text-decoration: none;
 }
 
 .logoheading img {
 width: 60px;
-padding:10px;
+padding-right:10px;
 }
 
-
-h1{
-    text-align: center;
-}
-
-/*----------------------------------------------------------------*/
 
 
 .vrpic{
@@ -43,8 +58,11 @@ h1{
   text-transform: uppercase;
   overflow: hidden;
   letter-spacing: 1px;
+  font-size: 2vh;
 
 }
+
+
 
 .topnav a {
   float: left;
@@ -52,7 +70,6 @@ h1{
   color: white;
   text-align: center;
   text-decoration: none;
-  font-size: 17px;
 
 }
 
@@ -84,15 +101,15 @@ h1{
     -ms-transform: translate(-50%, -50%);
     font-family: "Teko";
     letter-spacing: 2px;
-    font-size: 20px;
+    font-size: 2vw;
     text-decoration: none;
+    border-radius: 5px;
     border: none;
     cursor: pointer;
     background: #FC5D35;
-    border-radius: 5px;
     color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 20px;
+    text-transform: uppercase;
     
       
 }
