--- a/css/designs/footer.css
+++ b/css/designs/footer.css
@@ -1,9 +1,11 @@
 .footer-design {
+    margin-bottom: -40px;
     padding:40px 0;
     background-color:black;
     color: white;
     font-family: 'Teko';
     letter-spacing: 2px;
+    font-weight: 700;
   }
   
   .footer-design ul {
@@ -23,12 +25,9 @@
   .footer-design ul a {
     color:inherit;
     text-decoration:none;
-    opacity:0.8;
   }
   
-  .footer-design ul a:hover {
-    opacity:1;
-  }
+  
   
   .footer-design .copyright {
     margin-top:15px;
@@ -36,4 +35,5 @@
     font-size:13px;
     color: white;
     margin-bottom:0;
+    font-weight: 700;
   }
