--- a/css/designs/speciale.css
+++ b/css/designs/speciale.css
@@ -1,25 +1,19 @@
 SPECIAL EVENTS
 
-.p, h1{
-font-family: teko;
-}
-
 .newstext{
-position: relative;
-font-family: teko;
-max-width: 700px;
-margin-top: 60px;
 padding: 10px 50px 50px 50px;
 text-align: center;
-font-size: 1.8vw;
-background-color: white;
-opacity: 70%;
 color: #0d0d0d;
-z-index: 10000;
 
 }
 
 .imghuman{
 object-fit: cover;
 z-index: -9000;
+}
+
+.newsimage{
+    width: 100%;
+    height: 600px;
+    object-fit:cover;
 }
