--- a/css/designs/speciale.css
+++ b/css/designs/speciale.css
@@ -14,6 +14,12 @@ z-index: -9000;
 
 .newsimage{
     width: 100%;
-    height: 600px;
+    height: 500px;
+    object-fit:cover;
+}
+
+.newsimg{
+    width: 100%;
+    height: auto;
     object-fit:cover;
 }
