--- a/css/designs/about.css
+++ b/css/designs/about.css
@@ -24,7 +24,7 @@ text-align: center;
 .btn{
   font-family: "Teko";
   letter-spacing: 2px;
-  font-size: 2vh;
+  font-size: 3vw;
   text-decoration: none;
   border: none;
   cursor: pointer;
