--- a/css/designs/visit.css
+++ b/css/designs/visit.css
@@ -1,10 +1,11 @@
 
-.visittext{
-  padding-left: 150px;
-  padding-right: 150px;
-}
+
 
 .visitimg {
   object-fit: cover;
 }
 
+.map{
+  width:100%;
+  height:600px;
+}
